--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
-									<a href="./../final file/final.html"><h2 class="major">나가기 ▷</h2> </a>
+									<a href="https://sungeun222.github.io/jangsanbum06/"><h2 class="major">나가기 ▷</h2> </a>
 									<p> ㅤㅤㅤ</p>
 								</div>
 							
